@@ -14,7 +14,7 @@ class TestStreamTest {
     private TestStream testStream = new TestStream();
     @Test
     void testFindRichestPerson() {
-        Optional<Account> account = Optional.of(TestStream.accounts.get(0));
+        Optional<Account> account = Optional.of(TestStream.accounts.getFirst());
 
         assertEquals(account, testStream.findRichestPerson());
     }
@@ -129,11 +129,91 @@ class TestStreamTest {
 
     @Test
     void testGetEmailsByGenderWithBalanceGreaterThan(){
-        Map<Account.Sex, List<String>> expected = new HashMap<>(1);
+        Map<Account.Sex, List<String>> expected = new HashMap<>(3);
         expected.put(Account.Sex.MALE, List.of(TestStream.accounts.get(0).getEmail(),
                 TestStream.accounts.get(3).getEmail()));
         expected.put(Account.Sex.FEMALE, List.of(TestStream.accounts.get(1).getEmail()));
 
         assertEquals(expected, testStream.getEmailsByGenderWithBalanceGreaterThan(BigDecimal.valueOf(15_000L)));
     }
+
+    @Test
+    void testGetAccountsSortedByBalance(){
+        List<Account> list = new ArrayList<>();
+        list.add(TestStream.accounts.get(0));
+        list.add(TestStream.accounts.get(1));
+        list.add(TestStream.accounts.get(3));
+        list.add(TestStream.accounts.get(2));
+
+        assertEquals(list, testStream.getAccountsSortedByBalance());
+    }
+
+    @Test
+    void testGetAverageBalance(){
+        assertEquals(BigDecimal.valueOf(750_017_225), testStream.getAverageBalance());
+    }
+
+    @Test
+    void testGetAccountWithLongestName(){
+        Optional<Account> account = Optional.of(TestStream.accounts.get(0));
+
+        assertEquals(account, testStream.getAccountWithLongestName());
+    }
+
+    @Test
+    void testCountAccountsByGender(){
+        Map<Account.Sex, Long> expected = new HashMap<>(2);
+        expected.put(Account.Sex.MALE, 3L);
+        expected.put(Account.Sex.FEMALE, 1L);
+
+        assertEquals(expected, testStream.countAccountsByGender());
+    }
+
+    @Test
+    void testCollectAccountsById(){
+        Map<Long, Account> expected = new HashMap<>(4);
+        expected.put(1L, TestStream.accounts.get(0));
+        expected.put(2L, TestStream.accounts.get(1));
+        expected.put(3L, TestStream.accounts.get(2));
+        expected.put(4L, TestStream.accounts.get(3));
+
+        assertEquals(expected, testStream.collectAccountsById());
+    }
+
+    @Test
+    void groupTotalBalanceByMonth(){
+        List<Account> accounts = TestStream.accounts;
+        Map<Month, BigDecimal> expected = new HashMap<>(2);
+        expected.put(Month.JUNE, accounts.get(0).getBalance().add(accounts.get(1).getBalance()));
+        expected.put(Month.MARCH, accounts.get(2).getBalance().add(accounts.get(3).getBalance()));
+
+        assertEquals(expected,testStream.groupTotalBalanceByMonth());
+    }
+
+    @Test
+    void getCharacterFrequencyInFirstNames() {
+        Map<Character, Long> characterFrequencyInFirstAndLastNames = testStream.getCharacterFrequencyInFirstNames();
+
+        assertEquals(3, characterFrequencyInFirstAndLastNames.get('a').longValue());
+        assertEquals(1, characterFrequencyInFirstAndLastNames.get('c').longValue());
+        assertEquals(3, characterFrequencyInFirstAndLastNames.get('i').longValue());
+        assertEquals(1, characterFrequencyInFirstAndLastNames.get('J').longValue());
+        assertEquals(1, characterFrequencyInFirstAndLastNames.get('L').longValue());
+        assertEquals(2, characterFrequencyInFirstAndLastNames.get('l').longValue());
+        assertEquals(2, characterFrequencyInFirstAndLastNames.get('u').longValue());
+    }
+
+//    @Test
+//    void getCharacterFrequencyIgnoreCaseInFirstAndLastNames(){
+//        Map<Character, Long> characterFrequencyInFirstAndLastNames =
+//                testStream.getCharacterFrequencyIgnoreCaseInFirstAndLastNames();
+//
+//        assertEquals(3, characterFrequencyInFirstAndLastNames.get('a').longValue());
+//        assertEquals(1, characterFrequencyInFirstAndLastNames.get('c').longValue());
+//        assertEquals(3, characterFrequencyInFirstAndLastNames.get('i').longValue());
+//        assertEquals(1, characterFrequencyInFirstAndLastNames.get('J').longValue());
+//        assertEquals(1, characterFrequencyInFirstAndLastNames.get('L').longValue());
+//        assertEquals(2, characterFrequencyInFirstAndLastNames.get('l').longValue());
+//        assertEquals(2, characterFrequencyInFirstAndLastNames.get('u').longValue());
+//    }
 }
